# ResizeRight

./: README.md  pyproject.toml
.github/workflows/: test.yml
resize_right/: __init__.py
tests/: test_e2e.py
